2010-03-04  Darin Fisher  <darin@chromium.org>

        Reviewed by Dmitry Titov.

        [chromium] make history.{push,replace}State enabled at runtime
        https://bugs.webkit.org/show_bug.cgi?id=35753

        * public/WebRuntimeFeatures.h:
        * src/WebRuntimeFeatures.cpp:
        (WebKit::WebRuntimeFeatures::enablePushState):
        (WebKit::WebRuntimeFeatures::isPushStateEnabled):

2010-03-04  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: chromium tests fix.

        * src/js/Tests.js:

2010-03-03  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Remove two last synchronous calls from front-end to InspectorBackend.
        
        https://bugs.webkit.org/show_bug.cgi?id=35720

        * src/js/InspectorControllerImpl.js:
        (devtools.InspectorBackendImpl):
        (devtools.InspectorBackendImpl.prototype.setPauseOnExceptionsState):

2010-03-03  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Remove sync access to resourceTrackingEnabled.

        https://bugs.webkit.org/show_bug.cgi?id=35693

        * src/js/DevTools.js:

2010-03-04  Darin Fisher  <darin@chromium.org>

        Reviewed by Pavel Feldman.

        Fix failing DevToolsSanityTest.TestResourceContentLength
        https://bugs.webkit.org/show_bug.cgi?id=35725

        http://trac.webkit.org/changeset/55466 missed one more spot
        where contentLength needed to be renamed resourceSize.

        * src/js/Tests.js:

2010-03-03  Garret Kelly  <gdk@chromium.org>

        Reviewed by Darin Fisher.

        Adding touch event type and point type. Tested against the try bots.
        https://bugs.webkit.org/show_bug.cgi?id=35691

        * public/WebInputEvent.h:
        (WebKit::WebInputEvent::):
        (WebKit::WebInputEvent::isTouchEventType):
        (WebKit::WebTouchEvent::WebTouchEvent):
        * public/WebTouchPoint.h: Added.