@@ -1,3 +1,14 @@
+2010-03-04  John Gregg  <johnnyg@google.com>
+
+        Reviewed by Darin Fisher.
+
+        [chromium] WebDocument:applicationID() crashes on <meta> tag with no http-equiv attribute
+        https://bugs.webkit.org/show_bug.cgi?id=35771
+
+        * src/WebDocument.cpp:
+        (WebKit::WebDocument::applicationID):
+        check for presence of http-equiv attribute before lower()ing it.
+
 2010-03-04  Darin Fisher  <darin@chromium.org>
 
         Reviewed by Dmitry Titov.
